chore(dev): ont arm draft; recent dev

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,8 +5,8 @@ manifest {
     homePage = 'https://github.com/esteinig/cerebro'
     description = 'Metagenomic diagnostics of low-abundance pathogens'
     mainScript = 'main.nf'
-    version = '0.7.0'
-    // nextflowVersion = '>=23.04'
+    version = '0.8.0'
+    nextflowVersion = '>=23.04'
 }
 
 timeline {
@@ -75,10 +75,20 @@ params {
         }
     }
 
+    // Post-process pipeline outputs - this is 
+    // active in production mode by default for
+    // uploads and summary files
+
+    process {
+        enabled = true
+        taxa = false
+        ercc_mass = null
+    }
 
     // Global ONT specific settings
 
     ont {
+        enabled = false
         minimap2 {
             preset = "map-ont"
         } 
@@ -197,6 +207,19 @@ params {
             }
         }
 
+        background {
+            depletion {
+                enabled     = true
+                databases   = ""
+                references  = ""
+                taxa        = "Metazoa"
+                direct      = "9606"
+                min_cov     = 0
+                min_len     = 50
+                min_mapq    = 0
+            }
+        }
+
     }
 
     taxa {
@@ -206,31 +229,179 @@ params {
             enabled = true
 
             viruses {
-                enabled = true
+                enabled                                   = true     // complete genomes only to accurately delineate segments and           
+                databases {
+                    db_index                              = ""
+                    db_mash                               = ""
+                    db_fasta                              = ""
+                    background_references                 = ""
+                    background_dbs                        = ""
+                    blacklist                             = ""
+                    whitelist                             = ""
+                }
+                subset {
+                    enabled                               = false
+                    min_shared_hashes                     = 1
+                    selection {
+                        group_by                          = "taxid="
+                        group_sep                         = ";"
+                        select_by                         = "coverage"         
+                        segment_field                     = "segment="
+                        segment_field_nan                 = "segment=N/A"
+                    }
+                }
+                scan {
+                    enabled                               = true
+                    min_cov                               = 0  
+                    min_len                               = 0 
+                    min_mapq                              = 50   // this applies to ungrouped alignment and filter reads that do not map uniquely to database references
+                    min_reads                             = 0  
+                    min_coverage                          = 0 
+                    min_regions                           = 0
+                    min_regions_coverage                  = 0
+                    selection {
+                        group_by                          = "taxid="
+                        group_sep                         = ";"
+                        select_by                         = "coverage"         
+                        segment_field                     = "segment="
+                        segment_field_nan                 = "segment=N/A"
+                    }
+                }
+                remap {
+                    enabled                               = true
+                    min_cov                               = 0  
+                    min_len                               = 0 
+                    min_mapq                              = 0  
+                    min_reads                             = 0
+                    min_coverage                          = 0
+                    min_regions                           = 0
+                    min_regions_coverage                  = 0
+                    max_covtobed                          = 1000000
+                }
             } 
             bacteria {
-                enabled = true
+                enabled                                   = false               
+                databases {
+                    db_index                              = ""
+                    db_mash                               = ""
+                    db_fasta                              = ""
+                    background_references                 = ""
+                    background_dbs                        = ""
+                    blacklist                             = ""
+                    whitelist                             = ""
+                }
+                subset {
+                    enabled                               = true 
+                    min_shared_hashes                     = 2
+                    selection {
+                        group_by                          = "taxid="
+                        group_sep                         = ";"
+                        select_by                         = "coverage"         
+                        contig_field                      = "contig="
+                        contig_field_nan                  = "contig=N/A"
+                    }
+                }
+                scan {
+                    enabled                               = true
+                    min_cov                               = 0  
+                    min_len                               = 0 
+                    min_mapq                              = 50   // this applies to ungrouped alignment and filter reads that do not map uniquely to database references
+                    min_reads                             = 0  
+                    min_coverage                          = 0 
+                    min_regions                           = 0
+                    min_regions_coverage                  = 0
+                    selection {
+                        group_by                          = "taxid="
+                        group_sep                         = ";"
+                        select_by                         = "coverage"         
+                        contig_field                      = "contig="      
+                        contig_field_nan                  = "contig=N/A"
+                    }
+                }
+                remap {
+                    enabled                               = true
+                    min_cov                               = 0  
+                    min_len                               = 0 
+                    min_mapq                              = 0  
+                    min_reads                             = 0
+                    min_coverage                          = 0
+                    min_regions                           = 0
+                    min_regions_coverage                  = 0
+                    max_covtobed                          = 1000000
+                }
             }
             eukaryots {
-                enabled = true
+                enabled                                   = false               
+                databases {
+                    db_index                              = ""
+                    db_mash                               = ""
+                    db_fasta                              = ""
+                    background_references                 = ""
+                    background_dbs                        = ""
+                    blacklist                             = ""
+                    whitelist                             = ""
+                }
+                subset {
+                    enabled                               = false
+                    min_shared_hashes                     = 2
+                    selection {
+                        group_by                          = "taxid="
+                        group_sep                         = ";"
+                        select_by                         = "coverage"         
+                        contig_field                      = "contig="
+                        contig_field_nan                  = "contig=N/A"
+                    }
+                }
+                scan {
+                    enabled                               = true
+                    min_cov                               = 0  
+                    min_len                               = 0 
+                    min_mapq                              = 50   // this applies to ungrouped alignment and filter reads that do not map uniquely to database references
+                    min_reads                             = 0  
+                    min_coverage                          = 0 
+                    min_regions                           = 0
+                    min_regions_coverage                  = 0
+                    selection {
+                        group_by                          = "taxid="
+                        group_sep                         = ";"
+                        select_by                         = "coverage"         
+                        contig_field                      = "contig="
+                        contig_field_nan                  = "contig=N/A"
+                    }
+                }
+                remap {
+                    enabled                               = true
+                    min_cov                               = 0  
+                    min_len                               = 0 
+                    min_mapq                              = 0  
+                    min_reads                             = 0
+                    min_coverage                          = 0
+                    min_regions                           = 0
+                    min_regions_coverage                  = 0
+                    max_covtobed                          = 1000000
+                }
             }
+            
+            
         }
         kmer {
-            enabled = true
+            enabled = false
 
             kraken2 {
-                enabled            = true
-                confidence         = 0   // pathogen profiling
-                minimum_hit_groups = 3   // pathogen detection
+                enabled = true
+                confidence = 0   
+                minimum_hit_groups = 3   
             }
             bracken {
-                enabled            = false
-                read_length        = 100
-                taxonomic_level    = "S"
-                minimum_reads      = 3
+                enabled = false
+                read_length = 150
+                taxonomic_level = "S"
+                minimum_reads = 3
             }
         }
         assembly {
+            enabled = false
+
             meta {
                 enabled = true
                 spades {
@@ -293,8 +464,10 @@ params {
             }
         }
     }
-
-    // Metagenomics from culture for profiling and hybrid-assembly for species identification
+    
+    // =====================================================================================
+    // Metagenomics from culture for profiling and hybrid-assembly in species identification
+    // =====================================================================================
 
     culture {
         enabled = false
@@ -423,7 +596,7 @@ profiles {
         params.qc.host.depletion.enabled    = true 
 
     }
-    test_aneuploidy {
+    host_aneuploidy {
 
         // Test aneuploidy workflow which uses global quality
         // control parameters on the consented input samples 
@@ -491,11 +664,37 @@ profiles {
         params.kraken2_dbs = "db/langmead_eupath48,db/langmead_pluspf_64GB"
     }
 
+
     
     // =================
     // Pipeline Profiles
     // =================
 
+    ont_dev {
+        
+        params.qc.reads.enabled                      = true        
+        params.qc.reads.nanoq.enabled                = true    
+
+        params.qc.controls.ercc.enabled              = false
+        params.qc.controls.phage.enabled             = false
+
+        params.qc.host.depletion.enabled             = true
+        params.qc.host.depletion.min_len             = 0  
+        params.qc.host.depletion.min_cov             = 0                        // 50% read alignment query coverage
+        params.qc.host.depletion.references          = "db/chm13v2_ont.mmi"
+        params.qc.host.depletion.databases           = "db/kraken2/langmead_pluspf_16GB,db/kraken2/hall_hprc"
+
+        params.virus_background_references           = "db/background/SILVA_LSURef_NR99.fasta,db/background/SILVA_SSURef_NR99.fasta"
+        params.virus_background_dbs                  = "db/kraken2/langmead_pluspf_16GB,db/background/rrna"
+        params.virus_db_index                        = "db/synovial_viruses_ont.mmi"
+        params.virus_db_fasta                        = "db/synovial_viruses.fasta"
+
+        params.bacteria_fasta                        = "db/synovial_bacteria.fasta"
+        params.bacteria_mash_index                   = "db/synovial_bacteria_ont.msh"
+
+        params.taxa.enabled                          = true
+
+    }
 
     cns_assay {
         
@@ -514,20 +713,23 @@ profiles {
 
     panviral {
         
-        params.taxa.enabled                          = true
-        params.taxa.alignment.enabled                = true
-        params.taxa.alignment.viruses.enabled        = true
-        params.taxa.alignment.bacteria.enabled       = false
-        params.taxa.alignment.eukaryots.enabled      = false
-        params.taxa.assembly.meta.enabled            = false
-        params.taxa.assembly.viruses.enabled         = true
-        params.taxa.kmer.enabled                     = false
-
         params.qc.deduplication.enabled              = false
         params.qc.reads.enabled                      = true
         params.qc.controls.ercc.enabled              = false
         params.qc.controls.phage.enabled             = false
         params.qc.host.depletion.enabled             = true
+
+        params.taxa.enabled                          = true
+        params.taxa.kmer.enabled                     = false
+        params.taxa.alignment.enabled                = true
+        params.taxa.assembly.enabled                 = true
+
+        params.taxa.alignment.viruses.enabled        = true
+        params.taxa.alignment.bacteria.enabled       = false
+        params.taxa.alignment.eukaryots.enabled      = false
+        params.taxa.assembly.consensus.enabled       = true
+        params.taxa.assembly.meta.enabled            = false
+
 
         params.vircov_scan_reads                     = 0
         params.vircov_scan_regions                   = 0
@@ -545,8 +747,44 @@ profiles {
     // Resource Profiles
     // =================
 
+    home {        
+        params.resources.ivar.cpus = 1
+        params.resources.mash.cpus = 2
+        params.resources.fastp.cpus = 2
+        params.resources.spades.cpus = 16
+        params.resources.cerebro.cpus = 1
+        params.resources.umi_cerebro.cpus = 1
+        params.resources.kraken2.cpus = 8
+        params.resources.minimap2.cpus = 16
+        params.resources.blast_nt.cpus = 8
+        params.resources.diamond_nr.cpus = 8
+        params.resources.meta_spades.cpus = 16
+        params.resources.kraken2uniq.cpus = 8
+        params.resources.umi_align.cpus = 4
+        params.resources.umi_calib.cpus = 4
+        params.resources.rasusa.cpus = 2
+        params.resources.scrubby_reads.cpus = 16
+        params.resources.scrubby_single.cpus = 4
+        params.resources.minimap2_realign.cpus = 16
+        params.resources.minimap2_aneuploidy.cpus = 16
+        params.resources.cnvkit_aneuploidy.cpus = 2          // only parallelises on one sample and x control bam files
 
-    dgx {        
+        params.resources.blast_nt.memory    = "42 GB"
+        params.resources.diamond_nr.memory  = "42 GB"
+        params.resources.kraken2uniq.memory = "42 GB"
+        params.resources.meta_spades.memory = "42 GB"
+
+        params.taxa.assembly.meta.diamond.block_size = 8
+        params.taxa.assembly.meta.diamond.index_chunks = 1
+    }
+
+    alfred {        
+    }
+
+    mayo {        
+    }
+
+    vidrl {        
         params.resources.ivar.cpus = 1
         params.resources.mash.cpus = 8
         params.resources.fastp.cpus = 16
@@ -568,26 +806,38 @@ profiles {
         params.resources.minimap2_aneuploidy.cpus = 64
         params.resources.cnvkit_aneuploidy.cpus = 2          // only parallelises on one sample and x control bam files
 
-        // Around 160 GB memory for these settings?
-
         params.resources.blast_nt.memory    = "96 GB"
         params.resources.diamond_nr.memory  = "64 GB"
         params.resources.kraken2uniq.memory = "96 GB"
         params.resources.meta_spades.memory = "64 GB"
 
-
         params.taxa.assembly.meta.diamond.block_size = 8
         params.taxa.assembly.meta.diamond.index_chunks = 1
     }
 
-    limit_medium {
+    micro {
+        executor.$local.cpus = 8
+        executor.$local.memory = '42 GB'
+    }
+    tiny {
+        executor.$local.cpus = 16
+        executor.$local.memory = '64 GB'
+    }
+    mini {
+        executor.$local.cpus = 32
+        executor.$local.memory = '128 GB'
+    }
+    small {
+        executor.$local.cpus = 64
+        executor.$local.memory = '512 GB'
+    }
+    medium {
         executor.$local.cpus = 128
         executor.$local.memory = '512 GB'
     }
-
-    limit_large {
-        executor.$local.cpus = 196
-        executor.$local.memory = '1024 GB'
+    large {
+        executor.$local.cpus = 256
+        executor.$local.memory = '1960 GB'
     }
 
     // ======================================
