--- a/cerebro/stack/workflow/Cargo.toml
+++ b/cerebro/stack/workflow/Cargo.toml
@@ -25,6 +25,8 @@ path = "src/cli.rs"
 name = "cerebro_workflow"
 
 [dependencies]
+
+
 anyhow = "1.0"
 thiserror = "1.0"
 taxonomy = "0.10.0"
@@ -48,3 +50,4 @@ memchr = "2.7.2"
 uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
 clap = { version = "4.3.23", features = ["derive", "env", "unstable-styles", "wrap_help"] }
 anstyle = "1.0.6"
+fancy-regex = "0.11.0"
