chore(dev): development updates

--- a/nextflow.config
+++ b/nextflow.config
@@ -149,6 +149,10 @@ params {
         reads      = [7000000, 5000000, 3000000, 1000000, 500000, 100000]
         replicates = 1
     }
+
+    validation {
+        enabled = false
+    }
     
 
     qc {
