chore(dev): development updates

--- a/nextflow.config
+++ b/nextflow.config
@@ -151,10 +151,12 @@ params {
     }
 
     validation {
-        enabled = false
+        enabled      = false
         sample_sheet = null
+        qc {
+            enabled  = true
+        }
     }
-    
 
     qc {
         enabled = true
@@ -703,6 +705,26 @@ profiles {
 
     cns_assay {
         
+        params.qc.deduplication.enabled              = true
+        params.qc.deduplication.method               = "umi-naive"
+        params.qc.reads.enabled                      = true
+        params.qc.controls.ercc.enabled              = true
+        params.qc.controls.phage.enabled             = true
+        params.qc.host.depletion.enabled             = true
+        params.qc.reads.fastp.adapter_seq_1          = "AGATCGGAAGAGCACACGTCTGAACTCCAGTCA"
+        params.qc.reads.fastp.adapter_seq_2          = "AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGT"
+
+        params.taxa.enabled                          = true
+
+    }
+
+    cns_assay_validation {
+        
+        // Runs the experiment validation workflows
+
+        params.validation.enabled                    = true
+        params.validation.qc.enabled                 = true
+
         params.qc.deduplication.enabled              = true
         params.qc.deduplication.method               = "umi-naive"
         params.qc.reads.enabled                      = true
