chore(dev): development updates

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,7 +6,7 @@ manifest {
     description = 'Metagenomic diagnostics of low-abundance pathogens'
     mainScript = 'main.nf'
     version = '0.8.0'
-    nextflowVersion = '>=23.04'
+    nextflowVersion = '>=24.04'
 }
 
 timeline {
@@ -169,7 +169,7 @@ params {
         reads {
             fastp {
                 enabled                 = true
-                min_read_length         = 75
+                min_read_length         = 50
                 cut_tail_quality        = 20
                 complexity_threshold    = 30
                 adapter_auto_detect     = false
@@ -235,156 +235,46 @@ params {
         alignment {
             enabled = true
 
-            viruses {
-                enabled                                   = true     // complete genomes only to accurately delineate segments and           
-                databases {
-                    db_index                              = ""
-                    db_mash                               = ""
-                    db_fasta                              = ""
-                    blacklist                             = ""
-                    whitelist                             = ""
-                }
-                subset {
-                    enabled                               = false
-                    min_shared_hashes                     = 1
-                    selection {
-                        group_by                          = "taxid="
-                        group_sep                         = ";"
-                        select_by                         = "coverage"         
-                        segment_field                     = "segment="
-                        segment_field_nan                 = "segment=N/A"
-                    }
-                }
-                scan {
-                    enabled                               = true
-                    min_cov                               = 0  
-                    min_len                               = 0 
-                    min_mapq                              = 50      // this applies to ungrouped alignment and filter reads that do not map uniquely to database references
-                    min_reads                             = 0  
-                    min_coverage                          = 0 
-                    min_regions                           = 0
-                    min_regions_coverage                  = 0
-                    selection {
-                        group_by                          = "taxid="
-                        group_sep                         = ";"
-                        select_by                         = "coverage"         
-                        segment_field                     = "segment="
-                        segment_field_nan                 = "segment=N/A"
-                    }
-                }
-                remap {
-                    enabled                               = true
-                    min_cov                               = 0  
-                    min_len                               = 0 
-                    min_mapq                              = 0  
-                    min_reads                             = 0
-                    min_coverage                          = 0
-                    min_regions                           = 0
-                    min_regions_coverage                  = 0
-                    max_covtobed                          = 1000000
-                }
-            } 
-            bacteria {
-                enabled                                   = false               
-                databases {
-                    db_index                              = ""
-                    db_mash                               = ""
-                    db_fasta                              = ""
-                    blacklist                             = ""
-                    whitelist                             = ""
-                }
-                subset {
-                    enabled                               = true 
-                    min_shared_hashes                     = 2
-                    selection {
-                        group_by                          = "taxid="
-                        group_sep                         = ";"
-                        select_by                         = "coverage"         
-                        contig_field                      = "contig="
-                        contig_field_nan                  = "contig=N/A"
-                    }
-                }
-                scan {
-                    enabled                               = true
-                    min_cov                               = 0  
-                    min_len                               = 0 
-                    min_mapq                              = 50   // this applies to ungrouped alignment and filter reads that do not map uniquely to database references
-                    min_reads                             = 0  
-                    min_coverage                          = 0 
-                    min_regions                           = 0
-                    min_regions_coverage                  = 0
-                    selection {
-                        group_by                          = "taxid="
-                        group_sep                         = ";"
-                        select_by                         = "coverage"         
-                        contig_field                      = "contig="      
-                        contig_field_nan                  = "contig=N/A"
-                    }
-                }
-                remap {
-                    enabled                               = true
-                    min_cov                               = 0  
-                    min_len                               = 0 
-                    min_mapq                              = 0  
-                    min_reads                             = 0
-                    min_coverage                          = 0
-                    min_regions                           = 0
-                    min_regions_coverage                  = 0
-                    max_covtobed                          = 1000000
+            subset {
+                enabled                               = false
+                min_shared_hashes                     = 1
+                selection {
+                    group_by                          = "taxid="
+                    group_sep                         = ";"
+                    select_by                         = "coverage"         
+                    segment_field                     = "segment="
+                    segment_field_nan                 = "segment=N/A"
                 }
             }
-            eukaryots {
-                enabled                                   = false               
-                databases {
-                    db_index                              = ""
-                    db_mash                               = ""
-                    db_fasta                              = ""
-                    blacklist                             = ""
-                    whitelist                             = ""
-                }
-                subset {
-                    enabled                               = false
-                    min_shared_hashes                     = 2
-                    selection {
-                        group_by                          = "taxid="
-                        group_sep                         = ";"
-                        select_by                         = "coverage"         
-                        contig_field                      = "contig="
-                        contig_field_nan                  = "contig=N/A"
-                    }
-                }
-                scan {
-                    enabled                               = true
-                    min_cov                               = 0  
-                    min_len                               = 0 
-                    min_mapq                              = 50   // this applies to ungrouped alignment and filter reads that do not map uniquely to database references
-                    min_reads                             = 0  
-                    min_coverage                          = 0 
-                    min_regions                           = 0
-                    min_regions_coverage                  = 0
-                    selection {
-                        group_by                          = "taxid="
-                        group_sep                         = ";"
-                        select_by                         = "coverage"         
-                        contig_field                      = "contig="
-                        contig_field_nan                  = "contig=N/A"
-                    }
-                }
-                remap {
-                    enabled                               = true
-                    min_cov                               = 0  
-                    min_len                               = 0 
-                    min_mapq                              = 0  
-                    min_reads                             = 0
-                    min_coverage                          = 0
-                    min_regions                           = 0
-                    min_regions_coverage                  = 0
-                    max_covtobed                          = 1000000
+            scan {
+                enabled                               = true
+                min_cov                               = 0  
+                min_len                               = 0 
+                min_mapq                              = 0      // this applies to ungrouped alignment and filter reads that do not map uniquely to database references
+                min_reads                             = 0  
+                min_coverage                          = 0 
+                min_regions                           = 0
+                min_regions_coverage                  = 0
+                selection {
+                    group_by                          = "taxid="
+                    group_sep                         = ";"
+                    select_by                         = "coverage"         
+                    segment_field                     = "segment="
+                    segment_field_nan                 = "segment=N/A"
                 }
             }
-            
-            
+            remap {
+                enabled                               = true
+                min_cov                               = 0  
+                min_len                               = 0 
+                min_mapq                              = 0  
+                min_reads                             = 0
+                min_coverage                          = 0
+                min_regions                           = 0
+                min_regions_coverage                  = 0
+            }           
         }
+
         kmer {
             enabled = false
 
@@ -400,6 +290,7 @@ params {
                 minimum_reads = 3
             }
         }
+
         assembly {
             enabled = false
 
@@ -671,7 +562,7 @@ profiles {
     // Pipeline Profiles
     // =================
 
-    ont_dev {
+    dev {
         
         params.qc.reads.enabled                      = true        
         params.qc.reads.nanoq.enabled                = true    
@@ -682,19 +573,31 @@ profiles {
         params.qc.host.depletion.enabled             = true
         params.qc.host.depletion.min_len             = 0  
         params.qc.host.depletion.min_cov             = 0                        // 50% read alignment query coverage
-        params.qc.host.depletion.references          = "db/chm13v2_ont.mmi"
-        params.qc.host.depletion.databases           = "db/kraken2/langmead_pluspf_16GB,db/kraken2/hall_hprc"
+        params.qc.host.depletion.references          = "db/chm13v2_sr.mmi"
+        params.qc.host.depletion.databases           = "db/kraken2/hall_hprc"
 
         params.virus_background_references           = "db/background/SILVA_LSURef_NR99.fasta,db/background/SILVA_SSURef_NR99.fasta"
         params.virus_background_dbs                  = "db/kraken2/langmead_pluspf_16GB,db/background/rrna"
-        params.virus_db_index                        = "db/synovial_viruses_ont.mmi"
-        params.virus_db_fasta                        = "db/synovial_viruses.fasta"
 
-        params.bacteria_fasta                        = "db/synovial_bacteria.fasta"
-        params.bacteria_mash_index                   = "db/synovial_bacteria_ont.msh"
-
+        params.virus_db_fasta                        = "db/virosaurus98_full.fasta"
         params.taxa.enabled                          = true
 
+    }
+
+    db_sr {
+        params.qc.host.depletion.references          = "db/chm13v2_sr.mmi"
+        params.virus_db_index                        = "db/virosaurus98_full_sr.mmi"
+    }
+
+    db_ont {
+        params.qc.host.depletion.references          = "db/chm13v2_ont.mmi"
+        params.virus_db_index                        = "db/virosaurus98_full_ont.mmi"
+    }
+
+    twist_sr {
+        params.virus_db_index                        = "db/virosaurus98_full_sr.mmi"
+        params.qc.host.depletion.databases           = "db/kraken2/langmead_pluspf_64GB"
+        params.qc.host.depletion.references          = "db/chm13v2_sr.mmi"
     }
 
     cns_assay {
