chore(dev): development updates

--- a/nextflow.config
+++ b/nextflow.config
@@ -596,6 +596,7 @@ profiles {
 
     twist_sr {
         params.virus_db_index                        = "db/virosaurus98_full_sr.mmi"
+        params.virus_background_dbs                  = "db/kraken2/langmead_pluspf_64GB,db/background/rrna"
         params.qc.host.depletion.databases           = "db/kraken2/langmead_pluspf_64GB"
         params.qc.host.depletion.references          = "db/chm13v2_sr.mmi"
     }
