chore(dev): development updates

--- a/nextflow.config
+++ b/nextflow.config
@@ -595,6 +595,7 @@ profiles {
     }
 
     twist_sr {
+        params.taxa.assembly.consensus.enabled       = true
         params.virus_db_index                        = "db/virosaurus98_full_sr.mmi"
         params.virus_background_dbs                  = "db/kraken2/langmead_pluspf_64GB,db/background/rrna"
         params.qc.host.depletion.databases           = "db/kraken2/langmead_pluspf_64GB"
