chore(dev): development updates

--- a/nextflow.config
+++ b/nextflow.config
@@ -209,7 +209,7 @@ params {
                 taxa        = "Metazoa"
                 direct      = "9606"
                 min_cov     = 0
-                min_len     = 50
+                min_len     = 0
                 min_mapq    = 0
             }
         }
@@ -222,7 +222,7 @@ params {
                 taxa        = "Metazoa"
                 direct      = "9606"
                 min_cov     = 0
-                min_len     = 50
+                min_len     = 0
                 min_mapq    = 0
             }
         }
@@ -602,6 +602,8 @@ profiles {
         params.qc.host.depletion.references          = "db/chm13v2_sr.mmi"
     }
 
+
+
     cns_assay {
         
         params.qc.deduplication.enabled              = true
@@ -633,7 +635,27 @@ profiles {
         params.qc.reads.fastp.adapter_seq_1          = "AGATCGGAAGAGCACACGTCTGAACTCCAGTCA"
         params.qc.reads.fastp.adapter_seq_2          = "AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGT"
 
-        params.taxa.enabled                          = true
+        params.taxa.enabled                          = false
+
+    }
+
+    sim_validation {
+        
+        // Runs the experiment validation workflow on simulated dilution series panels (Cipher)
+
+        params.validation.enabled                    = true
+        params.validation.qc.enabled                 = true
+
+        params.qc.deduplication.enabled              = false
+        params.qc.deduplication.method               = "none"
+        params.qc.controls.ercc.enabled              = true
+        params.qc.reads.enabled                      = true
+        params.qc.host.depletion.enabled             = true
+        params.qc.controls.phage.enabled             = true
+        params.qc.reads.fastp.adapter_seq_1          = null
+        params.qc.reads.fastp.adapter_seq_2          = null
+
+        params.taxa.enabled                          = false
 
     }
 
