chore(dev): development updates

--- a/nextflow.config
+++ b/nextflow.config
@@ -602,8 +602,6 @@ profiles {
         params.qc.host.depletion.references          = "db/chm13v2_sr.mmi"
     }
 
-
-
     cns_assay {
         
         params.qc.deduplication.enabled              = true
@@ -654,6 +652,11 @@ profiles {
         params.qc.controls.phage.enabled             = true
         params.qc.reads.fastp.adapter_seq_1          = null
         params.qc.reads.fastp.adapter_seq_2          = null
+        
+        params.qc.controls.ercc.fasta                = "db/ERCC92.fasta"
+        params.qc.host.depletion.references          = "db/chm13v2_sr.mmi"
+        params.qc.host.depletion.databases           = "db/kraken2/langmead_pluspf_64GB"
+        params.qc.controls.phage.fasta               = "db/phage.fasta"
 
         params.taxa.enabled                          = false
 
