chore(dev): development updates

--- a/nextflow.config
+++ b/nextflow.config
@@ -573,7 +573,7 @@ profiles {
 
     }
     db {
-        params.qc.host.depletion.databases           = "db/kraken2/hall_hprc"
+        params.qc.host.depletion.databases           = "db/kraken2/langmead_pluspf_64GB"
         params.virus_background_references           = "db/background/SILVA_LSURef_NR99.fasta,db/background/SILVA_SSURef_NR99.fasta"
         params.virus_background_dbs                  = "db/kraken2/langmead_pluspf_16GB,db/background/rrna"
         params.virus_db_fasta                        = "db/virosaurus98_full.fasta"
